[metadata]
name = colored_prints
version = 0.0.1
author = James Berhol
author_email = efendidraculaa@gmail.com
description = For generating colored prints
long_description = file: README.md
url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True